# IS_Project_Thailand_Tourism_Recommendation

./: .gitignore  LICENSE  README.md  Thai_Traveler_Stat_2015-2023.csv  TripAdvisor_Location_Ids.csv  article_20201105143115.xlsx  data_preparation.ipynb  debug.html  main.ipynb  pyproject.toml  report.html  requirements.txt  text_sentiment_model.ipynb  tmp_pyproject.toml  tourism_attraction_locations_en.csv  v2022_1710742389824cmVwb3J0X0RlYyAyNTY2Ui54bHN4.xlsx
..bfg-report/2024-12-27/08-59-08/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
GUI/: app.py
app/: #3_feature_extraction.ipynb  #3_text_sentiment_model.ipynb  #5_recommendation_model.ipynb  #6_visualization.ipynb
app/frontend/: app.py  filter.py  tat_attractions.csv  tat_attractions_th.csv  transform_data.ipynb
dataset/: TripAdvisor_reviews_EN.csv  TripAdvisor_reviews_EN_Set-2.json  central_tourism_attraction_locations_en.csv  thailand_province_coordinate.csv  tourism_attraction_locations.csv  tourism_hotels_locations.csv  tourism_restaurants_locations.csv  tourism_shops_locations.csv  tourism_statistic.csv
dataset/locations/: TripAdvisor_Location_Ids.csv
dataset/reviews/: TripAdvisor_reviews_EN.csv  TripAdvisor_reviews_EN_Set-1.json
dataset/traveler_stat/: v2022_1693889720105RG9tZXN0aWNfUTEtUTRf4Lib4Li1IDI1NjNf4Lig4Liy4LiE4LiB4Lil4Liy4LiHLnhsc3g=.xlsx  v2022_1694273913835RG9tZXN0aWNfUTEtUTRf4Lib4Li1IDI1NjRf4Lig4Liy4LiE4LiB4Lil4Liy4LiHLnhsc3g=.xlsx  v2022_1716466918775RG9tZXN0aWNfUTEtUTRf4Lib4Li1LTI1NjVf4Lig4Liy4LiE4LiB4Lil4Liy4LiHLnhsc3g=.xlsx  v2022_1721880965382cmVwb3J0X0p1biAyNTY3Lnhsc3g=.xlsx
hook/: thai_province_data.py  thai_tourism_data.py  tripadvisor_data.py  tripadvisor_scarping.py
hook/data/: api_geographies.json  api_province_with_amphure_tambon.json  api_tambon.json
script/: data_visualization.ipynb  feature_engineering.ipynb  text_sentiment_model.ipynb
test/: Text_Tokenizer-And-Embled-Vector.ipynb
test/models/: CNN_text_sentiment.ipynb  Decision Tree_text_sentiment.ipynb  Fetch_Twetter_Data.py  GRU_text_sentiment.ipynb  K-Fold_Validation.ipynb  LSTM_text_sentiment.ipynb  SVN_Cleaned_Data.csv  SVN_Text_Sentiment copy.ipynb  Text_Sentiment_GRU.ipynb  Text_Sentiment_Hybrid_CNN-LSTM.ipynb  Text_Sentiment_LSTM.ipynb  Text_Sentiment_ML.ipynb  Text_Sentiment_RNN.ipynb  Text_Sentiment_SVN.ipynb  Text_Sentiment_Transformer.ipynb  Text_sentiment_CNN.ipynb  Tourism_Travel_Stat_Profiling.ipynb  Tourist_Recommendation.ipynb  Transformer_Text_Sentiment.ipynb  Word2Vec_demo.ipynb  cnn_text_sentiment.py  hybrid_cnn_lstm_text_sentiment.py  test_script.py
test/models/logs/: events.out.tfevents.1728016520.WHADG-Q302YCR9K2.local.63195.0
test/models/output/: Hybrid_CNN-LSTM_predictions.csv  LSTM_predictions.csv
test/models/results/checkpoint-500/: model.safetensors.REMOVED.git-id  optimizer.pt.REMOVED.git-id  scheduler.pt  trainer_state.json
test/prediction/: SVN_Prediction.csv
test/scraping/: Fetch_Twetter_Data.py
test/scraping/TripAdvisor/: app.ipynb  app.robot  index.html  province_attractions.py  script.py
utils/: constant.py  data_preparation.py
