[tool.poetry]
name = "is-project-thailand-tourism-recommendation"
version = "0.1.0"
description = ""
authors = ["Ittichai Boonyarakthunya <i.boonyarakthunya@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = ">=1.3.5,<2.2.1"
tensorflow = "^2.17.0"
scikit-learn = "^1.5.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.1"
geopy = "^2.4.1"
folium = "^0.17.0"
geopandas = "^1.0.1"
urllib3 = "^2.2.2"
certifi = "^2024.7.4"
taipy = "^3.1.1"
jupyter = "^1.0.0"
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.36.0", markers = "platform_system == 'Windows'" }
]
pythainlp = "^5.0.4"
seaborn = "^0.13.2"
imblearn = "^0.0"
parsel = "^1.9.1"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
